Top7% basic solution Private Score 0.65841

--- a/20241120_M5_top7P_all.ipynb
+++ b/20241120_M5_top7P_all.ipynb
@@ -56,10 +56,10 @@
         "# IMPORTANT: SOME KAGGLE DATA SOURCES ARE PRIVATE\n",
         "# RUN THIS CELL IN ORDER TO IMPORT YOUR KAGGLE DATA SOURCES.\n",
         "import kagglehub\n",
-        "kagglehub.login()\n"
+        "kagglehub.login()"
       ],
       "metadata": {
-        "id": "zArf5U3IW4CP"
+        "id": "vCGespR6qXOC"
       },
       "cell_type": "code",
       "outputs": [],
@@ -75,14 +75,23 @@
         "\n",
         "m5_forecasting_accuracy_path = kagglehub.competition_download('m5-forecasting-accuracy')\n",
         "\n",
-        "print('Data source import complete.')\n"
+        "print('Data source import complete.')"
       ],
       "metadata": {
-        "id": "_DRxl3ZrW4CQ"
+        "id": "ASG5ewJOqXOH"
       },
       "cell_type": "code",
       "outputs": [],
       "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "insa9zOjqdjb"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -116,7 +125,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:28.809989Z",
           "shell.execute_reply": "2024-11-22T05:28:29.134775Z"
         },
-        "id": "qdn9fAd4W4CR"
+        "id": "rfKFz1UwqXOH"
       },
       "outputs": [],
       "execution_count": null
@@ -170,7 +179,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:29.137535Z",
           "shell.execute_reply": "2024-11-22T05:28:29.14131Z"
         },
-        "id": "8IywHJqXW4CR"
+        "id": "w33DgxoiqXOI"
       },
       "outputs": [],
       "execution_count": null
@@ -197,7 +206,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:29.144029Z",
           "shell.execute_reply": "2024-11-22T05:28:48.053792Z"
         },
-        "id": "W4NxRUK_W4CS"
+        "id": "6zQ1A57nqXOJ"
       },
       "outputs": [],
       "execution_count": null
@@ -216,7 +225,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.0559Z",
           "shell.execute_reply": "2024-11-22T05:28:48.084448Z"
         },
-        "id": "8gTLOtdvW4CS"
+        "id": "-DBg2ejRqXOK"
       },
       "outputs": [],
       "execution_count": null
@@ -235,7 +244,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.087836Z",
           "shell.execute_reply": "2024-11-22T05:28:48.105929Z"
         },
-        "id": "47udKfrIW4CS"
+        "id": "hHj5ZZsrqXOK"
       },
       "outputs": [],
       "execution_count": null
@@ -254,7 +263,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.108332Z",
           "shell.execute_reply": "2024-11-22T05:28:48.140479Z"
         },
-        "id": "JZGATGENW4CS"
+        "id": "6XjHaKHMqXOL"
       },
       "outputs": [],
       "execution_count": null
@@ -273,7 +282,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.142944Z",
           "shell.execute_reply": "2024-11-22T05:28:48.169173Z"
         },
-        "id": "zBDow1DKW4CS"
+        "id": "vynS2FiMqXOL"
       },
       "outputs": [],
       "execution_count": null
@@ -312,7 +321,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.171479Z",
           "shell.execute_reply": "2024-11-22T05:28:48.595905Z"
         },
-        "id": "Jr3iNA5uW4CS"
+        "id": "2I7Q_jMfqXOM"
       },
       "outputs": [],
       "execution_count": null
@@ -374,7 +383,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.598636Z",
           "shell.execute_reply": "2024-11-22T05:28:48.602546Z"
         },
-        "id": "syDPMzQTW4CT"
+        "id": "f7w0o6XuqXOM"
       },
       "outputs": [],
       "execution_count": null
@@ -406,7 +415,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.604522Z",
           "shell.execute_reply": "2024-11-22T05:28:48.757421Z"
         },
-        "id": "b5hfiWv8W4CT"
+        "id": "qvTd1Cd6qXON"
       },
       "outputs": [],
       "execution_count": null
@@ -425,7 +434,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.759124Z",
           "shell.execute_reply": "2024-11-22T05:28:48.76219Z"
         },
-        "id": "q4yDPIVoW4CT"
+        "id": "lKth0YO-qXON"
       },
       "outputs": [],
       "execution_count": null
@@ -448,7 +457,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.764386Z",
           "shell.execute_reply": "2024-11-22T05:28:48.867564Z"
         },
-        "id": "IlKskaJnW4CT"
+        "id": "fSgvohoVqXON"
       },
       "outputs": [],
       "execution_count": null
@@ -469,7 +478,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:48.870192Z",
           "shell.execute_reply": "2024-11-22T05:28:48.996472Z"
         },
-        "id": "co4erXgGW4CT"
+        "id": "SpCOvSTzqXON"
       },
       "outputs": [],
       "execution_count": null
@@ -490,7 +499,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:49.001606Z",
           "shell.execute_reply": "2024-11-22T05:28:49.110717Z"
         },
-        "id": "bXmBOG2lW4CT"
+        "id": "smTNP6RjqXON"
       },
       "outputs": [],
       "execution_count": null
@@ -509,7 +518,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:49.113272Z",
           "shell.execute_reply": "2024-11-22T05:28:49.119693Z"
         },
-        "id": "nb_lircUW4CT"
+        "id": "dAprlYI_qXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -530,7 +539,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:49.122588Z",
           "shell.execute_reply": "2024-11-22T05:28:55.390922Z"
         },
-        "id": "Qz_npDm7W4CU"
+        "id": "o1wMzX7ZqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -549,7 +558,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:55.393134Z",
           "shell.execute_reply": "2024-11-22T05:28:55.398557Z"
         },
-        "id": "IJCE7xHjW4CU"
+        "id": "WlBqiv7DqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -570,7 +579,7 @@
           "shell.execute_reply.started": "2024-11-22T05:28:55.400765Z",
           "shell.execute_reply": "2024-11-22T05:29:06.437592Z"
         },
-        "id": "0AQpzcdaW4CU"
+        "id": "sXkDdY6GqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -589,7 +598,7 @@
           "shell.execute_reply.started": "2024-11-22T05:29:06.439939Z",
           "shell.execute_reply": "2024-11-22T05:29:06.445491Z"
         },
-        "id": "qE1dmgvcW4CU"
+        "id": "tyZdzqZEqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -610,7 +619,7 @@
           "shell.execute_reply.started": "2024-11-22T05:29:06.447843Z",
           "shell.execute_reply": "2024-11-22T05:30:50.602946Z"
         },
-        "id": "RxILnyYSW4CU"
+        "id": "1qHbbg5OqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -631,7 +640,7 @@
           "shell.execute_reply.started": "2024-11-22T05:30:50.60565Z",
           "shell.execute_reply": "2024-11-22T05:30:53.581912Z"
         },
-        "id": "ry39J4NkW4CU"
+        "id": "sE_IEsdtqXOO"
       },
       "outputs": [],
       "execution_count": null
@@ -652,7 +661,7 @@
           "shell.execute_reply.started": "2024-11-22T05:30:53.584215Z",
           "shell.execute_reply": "2024-11-22T05:31:09.074548Z"
         },
-        "id": "5cbpPGRqW4CU"
+        "id": "bB5mTfN1qXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -673,7 +682,7 @@
           "shell.execute_reply.started": "2024-11-22T05:31:09.076761Z",
           "shell.execute_reply": "2024-11-22T05:31:31.224376Z"
         },
-        "id": "KrPlto5zW4CU"
+        "id": "g8ADsEdlqXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -693,7 +702,7 @@
           "shell.execute_reply.started": "2024-11-22T05:31:31.226132Z",
           "shell.execute_reply": "2024-11-22T05:31:33.606127Z"
         },
-        "id": "H4RbwNhTW4CU"
+        "id": "FS4V7GvAqXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -714,7 +723,7 @@
           "shell.execute_reply.started": "2024-11-22T05:31:33.609039Z",
           "shell.execute_reply": "2024-11-22T05:32:01.68237Z"
         },
-        "id": "Yqk64ZIRW4CU"
+        "id": "OJL7gtKbqXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -734,7 +743,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:01.684379Z",
           "shell.execute_reply": "2024-11-22T05:32:01.687817Z"
         },
-        "id": "eaRSKaJlW4CU"
+        "id": "TR3523GEqXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -755,7 +764,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:01.689908Z",
           "shell.execute_reply": "2024-11-22T05:32:02.550477Z"
         },
-        "id": "SQ9FR5bTW4CU"
+        "id": "IOXvvRljqXOP"
       },
       "outputs": [],
       "execution_count": null
@@ -776,7 +785,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:02.552765Z",
           "shell.execute_reply": "2024-11-22T05:32:10.566494Z"
         },
-        "id": "vB0vj5F3W4CV"
+        "id": "cvT6m_jzqXOQ"
       },
       "outputs": [],
       "execution_count": null
@@ -796,7 +805,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:10.569267Z",
           "shell.execute_reply": "2024-11-22T05:32:13.144147Z"
         },
-        "id": "p85nt1o-W4CV"
+        "id": "FYVh6DvrqXOQ"
       },
       "outputs": [],
       "execution_count": null
@@ -818,7 +827,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:13.146136Z",
           "shell.execute_reply": "2024-11-22T05:32:23.451879Z"
         },
-        "id": "8OH-ziYgW4CV"
+        "id": "6M64D4QzqXOQ"
       },
       "outputs": [],
       "execution_count": null
@@ -854,7 +863,7 @@
           "shell.execute_reply.started": "2024-11-22T05:32:23.453951Z",
           "shell.execute_reply": "2024-11-22T06:04:55.534679Z"
         },
-        "id": "ZaS5OgvaW4CV"
+        "id": "XIHg_J18qXOQ"
       },
       "outputs": [],
       "execution_count": null
@@ -891,7 +900,7 @@
           "shell.execute_reply.started": "2024-11-22T06:04:55.536876Z",
           "shell.execute_reply": "2024-11-22T06:06:06.2942Z"
         },
-        "id": "AkF33mylW4CV"
+        "id": "nkYO-Z6PqXOQ"
       },
       "outputs": [],
       "execution_count": null
@@ -976,7 +985,7 @@
       ],
       "metadata": {
         "trusted": true,
-        "id": "AcNczjjeW4CV"
+        "id": "V1odtAHLqXOR"
       },
       "outputs": [],
       "execution_count": null
@@ -986,7 +995,7 @@
       "source": [],
       "metadata": {
         "trusted": true,
-        "id": "S_BEcg1oW4CV"
+        "id": "5-iZymUeqXOR"
       },
       "outputs": [],
       "execution_count": null
@@ -996,7 +1005,7 @@
       "source": [],
       "metadata": {
         "trusted": true,
-        "id": "lK2r2ksmW4CV"
+        "id": "YiaO-egXqXOR"
       },
       "outputs": [],
       "execution_count": null
@@ -1006,7 +1015,7 @@
       "source": [],
       "metadata": {
         "trusted": true,
-        "id": "yPUefeIoW4CV"
+        "id": "UNxDuDY2qXOR"
       },
       "outputs": [],
       "execution_count": null
